--- a/style/style.css
+++ b/style/style.css
@@ -5,16 +5,31 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background-color: #080808;
     color:#fff;
 }
 
-#header{
+#home{
     height: 100vh;
-    background-image: url("/images/background.png");
+    background-color: black;
 }
 
+.header-row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.header-right img{
+    position: relative;
+    height: 39em;
+    left: 9.5rem;
+}
 .container{
     padding: 10px 10%;
 }
@@ -337,6 +352,12 @@ form input, form textarea{
     border-radius: 6px;
 }
 
+#msg{
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
+}
+
 form .btn2{
     padding: 14px 60px;
     font-size: 18px;
@@ -354,3 +375,82 @@ form .btn2{
 }
 
 /* -----------CSS for Small Screens----------- */
+nav .fa-solid{
+    display: none;
+}
+
+@media only screen and (max-width: 700px) {
+    
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1{
+        font-size: 30px;
+    }
+
+    .header-right img{
+        position: relative;
+        height: 33rem;
+        left: 4rem;
+    }
+
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+    }
+
+    .sub-title{
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+
+    .about-col-2{
+        font-size: 14px;
+    }
+
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+
+    .copyright{
+        font-size: 14px;
+    }
+}
